
import java.util.Iterator;

public interface Menu {
	public java.util.Iterator<MenuItem> createIterator();
}
